--- a/templates/cabinet/parcels/editform.html.twig
+++ b/templates/cabinet/parcels/editform.html.twig
@@ -309,7 +309,7 @@
                  $('#addAddressForm').modal({show:true});
                  $('form').on('keyup','#address_form_ajax_city'
                      + ',#address_form_ajax_street'
-                     + ',#address_form_ajax_house'
+                     // + ',#address_form_ajax_house'
                      + ',#address_form_ajax_regionOblast'
                      + ',#address_form_ajax_zip'
                      // + ',#address_form_ajax_apartment'
