--- a/templates/cabinet/addresses/edit_form_of_address.html.twig
+++ b/templates/cabinet/addresses/edit_form_of_address.html.twig
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div class="row py-4 justify-content-center">
-                    <div class="col-3 col-sm-3">
+                    <div class="col-6 col-sm-6">
                         <div class="form-group">
                             {{ form_label(addressForm.country,"City"|trans, {
                                 "label_attr": {"class": "text-muted"}
@@ -112,63 +112,23 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-3 col-sm-3">
+                    <div class="col-6 col-sm-6">
                         <div class="form-group">
-                            {{ form_label(addressForm.street,"Street"|trans, {
+                            {{ form_label(addressForm.address,"Address"|trans, {
                                 "label_attr": {"class": "text-muted"}
                             }) }}
                             <div class="input-group with-focus">
-                                {% if addressForm.street.vars.errors|length %}
-                                    {{ form_widget(addressForm.street, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}
+                                {% if addressForm.address.vars.errors|length %}
+                                    {{ form_widget(addressForm.address, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}
                                 {% else %}
-                                    {{ form_widget(addressForm.street) }}
+                                    {{ form_widget(addressForm.address) }}
                                 {% endif %}
                                 <div class="input-group-append">
                              <span class="input-group-text text-muted bg-transparent border-left-0">
                                  <em class="fa fa-user"></em>
                              </span>
                                 </div>
-                                <div class="invalid-feedback">{{ form_errors(addressForm.street) }}</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-3 col-sm-3">
-                        <div class="form-group">
-                            {{ form_label(addressForm.house,"Number of house"|trans, {
-                                "label_attr": {"class": "text-muted"}
-                            }) }}
-                            <div class="input-group with-focus">
-                                {% if addressForm.house.vars.errors|length %}
-                                    {{ form_widget(addressForm.house, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}
-                                {% else %}
-                                    {{ form_widget(addressForm.house) }}
-                                {% endif %}
-                                <div class="input-group-append">
-                             <span class="input-group-text text-muted bg-transparent border-left-0">
-                                 <em class="fa fa-user"></em>
-                             </span>
-                                </div>
-                                <div class="invalid-feedback">{{ form_errors(addressForm.house) }}</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-3 col-sm-3">
-                        <div class="form-group">
-                            {{ form_label(addressForm.apartment,"Number of apartment"|trans, {
-                                "label_attr": {"class": "text-muted"}
-                            }) }}
-                            <div class="input-group with-focus">
-                                {% if addressForm.apartment.vars.errors|length %}
-                                    {{ form_widget(addressForm.apartment, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}
-                                {% else %}
-                                    {{ form_widget(addressForm.apartment) }}
-                                {% endif %}
-                                <div class="input-group-append">
-                             <span class="input-group-text text-muted bg-transparent border-left-0">
-                                 <em class="fa fa-user"></em>
-                             </span>
-                                </div>
-                                <div class="invalid-feedback">{{ form_errors(addressForm.apartment) }}</div>
+                                <div class="invalid-feedback">{{ form_errors(addressForm.address) }}</div>
                             </div>
                         </div>
                     </div>
@@ -214,26 +174,6 @@
                             </div>
                         </div>
                     </div>
-{#                    <div class="col-4 col-sm-4">#}
-{#                        <div class="form-group">#}
-{#                            {{ form_label(addressForm.userSecondName,"Receivers second name"|trans, {#}
-{#                                "label_attr": {"class": "text-muted"}#}
-{#                            }) }}#}
-{#                            <div class="input-group with-focus">#}
-{#                                {% if addressForm.userSecondName.vars.errors|length %}#}
-{#                                    {{ form_widget(addressForm.userSecondName, {"attr": {"class": "is-invalid form-control border-right-0"}}) }}#}
-{#                                {% else %}#}
-{#                                    {{ form_widget(addressForm.userSecondName) }}#}
-{#                                {% endif %}#}
-{#                                <div class="input-group-append">#}
-{#                             <span class="input-group-text text-muted bg-transparent border-left-0">#}
-{#                                 <em class="fa fa-user"></em>#}
-{#                             </span>#}
-{#                                </div>#}
-{#                                <div class="invalid-feedback">{{ form_errors(addressForm.userSecondName) }}</div>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                    </div>#}
                 </div>
                 <div class="row py-4 justify-content-center">
                     <div class="col-4 col-sm-4">
