--- a/templates/track/index.html.twig
+++ b/templates/track/index.html.twig
@@ -9,6 +9,8 @@
                 {{ "Find for tracking number"| trans }}: {{ trNum  }}
             </div>
             <div class="card-body">
+                <div>  {{ "Track your package1"| trans }}: <a href="{{ urltousa }}">{{ trNumtousa  }}</a></div>
+                <div>{{ "Track your package2"| trans }}: <a href="{{ urlinusa }}">{{ trNuminusa  }}</a></div>
                 <!-- START table-responsive-->
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover">
