--- a/templates/cabinet/find/index.html.twig
+++ b/templates/cabinet/find/index.html.twig
@@ -7,7 +7,15 @@
         <!-- START card-->
         <div class="card card-default">
             <div class="card-header">
-                {{ "Find for tracking number"| trans }}: {{ trNum  }}
+                <div class="row">
+                    <div class="col-md-8">
+                        {{ "Find for tracking number"| trans }}: {{ trNum  }}
+                    </div>
+                    <div class="col-md-4">
+                        <div class="track-font">  {{ "Track your package1"| trans }} {{ companyToUSA }}: <a href="{{ urltousa }}">{{ trNumtousa  }}</a></div>
+                        <div class="track-font">{{ "Track your package2"| trans }} {{ companyInUSA }}: <a href="{{ urlinusa }}">{{ trNuminusa  }}</a></div>
+                    </div>
+                </div>
             </div>
             <div class="card-body">
                 <!-- START table-responsive-->
