--- a/templates/cabinet/parcels/parcels.html.twig
+++ b/templates/cabinet/parcels/parcels.html.twig
@@ -127,9 +127,9 @@
                                             <td>{{ item.trackingNumber }}</td>
                                         {% endif %}
                                         <td>
-                                        {% if item.orderType is not empty and item.orderType.code is defined  %}
-                                            {{ item.orderType.code|trans }}
-                                        {% endif %}
+{#                                        {% if item.orderType is not empty and item.orderType.code is defined  %}#}
+{#                                            {{ item.orderType.code|trans }}#}
+{#                                        {% endif %}#}
                                         </td>
                                         <td>{{ item.sendDetailWeight }}</td>
                                         <td>{{ item.volumeWeigth }}</td>
