--- a/templates/track/index.html.twig
+++ b/templates/track/index.html.twig
@@ -14,7 +14,7 @@
                         {% if trNumtousa is not empty %}
                          <div class="track-font">  {{ "Track your package1"| trans }} {{ companyToUSA }}: <a href="{{ urltousa }}">{{ trNumtousa  }}</a></div>
                         {% endif %}
-                        {% if urlinusa is not empty %}
+                        {% if express == 1 and  urlinusa is not empty %}
                          <div class="track-font">{{ "Track your package2"| trans }} {{ companyInUSA }}: <a href="{{ urlinusa }}">{{ trNuminusa  }}</a></div>
                         {% endif %}
                     </div>
