--- a/templates/cabinet/find/index.html.twig
+++ b/templates/cabinet/find/index.html.twig
@@ -15,7 +15,7 @@
                         {% if trNumtousa is not empty %}
                             <div class="track-font">  {{ "Track your package1"| trans }} {{ companyToUSA }}: <a href="{{ urltousa }}">{{ trNumtousa  }}</a></div>
                         {% endif %}
-                        {% if trNuminusa is not empty %}
+                        {% if express == 1 and trNuminusa is not empty %}
                             <div class="track-font">{{ "Track your package2"| trans }} {{ companyInUSA }}: <a href="{{ urlinusa }}">{{ trNuminusa  }}</a></div>
                         {% endif %}
                     </div>
